--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto Planeta</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -16,13 +17,14 @@
             <a href="">Support</a>
             <a href="">Contact Us</a>
         </div>
+        <div class="menu">
+            <img src="" alt="">
+        </div>
     </div>
     <div class="main">
         <div class="lado-esquerdo">
             <div class="conteudo">
-                <p>“Hello World!” Vamos aprender na prática
-                    Será que é facil fazer o HTML e CSS sem o FIGMA?
-                    Vamos testar isso agora, na prática!</p>
+                <p>“Hello World!” Vamos aprender na prática</p>
                     <h1>Será que é facil fazer o HTML e CSS sem o FIGMA?</h1>
                     <p>Vamos testar isso agora, na prática!</p>
             </div>
